--- a/Login.html
+++ b/Login.html
@@ -26,16 +26,14 @@
     <div class="form-box login">
         <h2>Ingresar</h2>
         <form action="#">
-            <div class="input-box">
-                <span class="icon"></span>
-                <input type="email" required>
-                <label>Email</label>
-            </div>
-            <div class="input-box">
-                <span class="icon"></span>
-                <input type="password" required>
-                <label>Contraseña</label>
-            </div>
+          <div class="input-box">
+             <input type="email" placeholder=" " required>
+            <label>Email</label>
+           </div>
+              <div class="input-box">
+               <input type="contrasñea" placeholder=" " required>
+              <label>Contraseña</label>
+             </div>
             <div class="recover">
                 <a href="#">¿Olvidaste la Contraseña?</a>
             </div>
